# hermes

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  conftest.py  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini
.github/: dependabot.yaml
docker/: entrypoint  start
hermes/: asgi.py  settings.py  urls.py  wsgi.py
hermes/assets/js/: main.js
hermes/core/: context_processors.py  urls.py  views.py
hermes/core/management/commands/: database_ready.py
hermes/core/templatetags/: core.py
hermes/debug/: shortcuts.py  urls.py
hermes/forms/: decorators.py  forms.py  mixins.py  models.py  signals.py  tasks.py  urls.py  urls_submission.py  utils.py  views.py
hermes/forms/migrations/: 0001_initial.py  0002_form_validate_referrer.py  0003_auto_20210501_1339.py  0004_form_redirect_url.py
hermes/generic/: mixins.py
hermes/hooks/: __init__.py  mixins.py
hermes/hooks/mail/: __init__.py  admin.py  apps.py  email.py  forms.py  models.py  signal_handlers.py
hermes/templates/: base.html
hermes/templates/account/: email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_from_key.html  signup.html
hermes/templates/generic/: confirm_delete.html  form.html
hermes/templates/menu/: messages.html  navbar.html
hermes/templates/socialaccount/: authentication_error.html  connections.html  login_cancelled.html  signup.html
hermes/users/: admin.py  models.py
hermes/users/migrations/: 0001_initial.py
hermes/users/tests/: test_users.py
hermes/utils/: email.py  fs.py
(+19 files in other folders)
