[tool.poetry]
name = "hermes"
version = "0.1.0"
description = "Formspree, but self hosted"
authors = ["Niek Keijzer <info@niekkeijzer.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.1.7"
psycopg2-binary = "2.8.6"
python-decouple = "3.4"
dj-database-url = "0.5.0"
whitenoise = "5.2.0"
Pillow = "8.1.2"
asgiref = "3.3.1"
django-cache-url = "3.2.3"
django-allauth = "0.44.0"
packaging = "20.9"
django-compressor = "2.4"
django-crispy-forms = "^1.11.0"
drf-spectacular = "^0.14.0"
gunicorn = "^20.0.4"
uvicorn = {version = "^0.13.4", extras = ["standard"]}
django-q = "^1.3.5"
django-q-email = "^5.0.1"
django-appconf = "^1.0.4"
html2text = "^2020.1.16"
bleach = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.2"
black = "20.8b1"
isort = "5.8.0"
seed-isort-config = "2.2.0"
mypy = "0.812"
bandit = "1.7.0"
pytest-cov = "2.11.1"
pytest-dotenv = "0.5.2"
pre-commit = "2.11.1"
pytest-django = "4.1.0"
requests-mock = "1.8.0"
django-debug-toolbar = "3.2"
curlylint = "0.12.2"
pytest-mock = "^3.5.1"

[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''
(
/(
   \.eggs         # exclude a few common directories in the
 | \.git          # root of the project
 | \.mypy_cache
 | \.venv
 | build
 | dist
)/
)
'''

[tool.isort]
profile = "black"
known_third_party = ["bleach", "decouple", "dj_database_url", "django", "django_cache_url", "django_q", "pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
